auth: avoid URL constructors
URL constructors are deprecated at Java 20.